USBIP Protocol
Open Mobile Alliance Lightweight Machine to Machine TLV payload Added (LwM2M TLV)
Metamako trailers
ISO 8583-1
Bluetooth Pseudoheader for BR/EDR
Edge Control Protocol (ECP)
Bachmann bluecom Protocol
Apache Cassandra - CQL version 3.0
Real Time Location System (RTLS)
Network-Based IP Flow Mobility (NBIFOM)
IEEE 802.1BR E-Tag
Nordic BLE Sniffer
--sort-and-group--

=== Updated Protocol Support

Bluetooth OBEX dissector (btobex) was renamed to Obex Dissector (obex), allow to
DecodeAs it over USB, TCP and UDP.

A preference was added to TCP dissector for handling IPFIX process
information.  It has been disabled by default.

//Too many protocols have been updated to list here.

=== New and Updated Capture File Support

//_Non-empty section placeholder._
// Add one file type per line between the --sort-and-group-- delimiters.
--sort-and-group--
Micropross mplog
--sort-and-group--

=== New and Updated Capture Interfaces support

_Non-empty section placeholder._
--sort-and-group--
--sort-and-group--

=== Major API Changes

The libwireshark API has undergone some major changes:

* The address macros (e.g., SET_ADDRESS) have been removed.  Use the
(lower case) functions of the same names instead.

* "old style" dissector functions (that don't return number of bytes
used) have been replaced in name with the "new style" dissector
functions.

* tvb_get_string and tvb_get_stringz have been replaced with
tvb_get_string_enc and tvb_get_stringz_enc respectively.


== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the https://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations
