@@ -665,6 +665,7 @@ DISSECTOR_SRC = \
 	packet-gsm_a_rr.c	\
 	packet-gsm_abis_om2000.c	\
 	packet-gsm_abis_oml.c	\
+	packet-gsm_abis_tfp.c	\
 	packet-gsm_bsslap.c	\
 	packet-gsm_bssmap_le.c	\
 	packet-gsm_cbch.c	\
